# VERSE-toolchain-user-study-2025

./: .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  quickchick.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: client-ci.yml  server-ci.yml
cn/: README.md  cn
cn-intro/: Readme.md  dafny_examples.c  mdd_gripes.md  run_cn.sh  simple_examples.c  tutorial.c
cn-lsp/client/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
cn-lsp/client/src/: extension.ts
cn-lsp/client/syntaxes/: README.md  cn.tmLanguage.json
cn-lsp/doc/design/: 0001-resource-hover.md
cn-lsp/server/: .gitignore  README.md  cn-lsp-server.cabal  cnlsp.opam  cnlsp.opam.locked  cnlsp.opam.locked-5.1.1  cnlsp.opam.template  dune-project  install.sh
cn-lsp/server-hs/: cabal.project.freeze
cn-lsp/server-hs/app/: Main.hs
cn-lsp/server-hs/src/: CN.hs  Log.hs  Util.hs
cn-lsp/server-hs/src/Handlers/TextDocument/: DidChange.hs  DidOpen.hs  DidSave.hs
cn-lsp/server/app/: Main.hs
cn-lsp/server/lib/: dune  log.ml  log.mli  lspCn.ml  lspCn.mli  position.ml  position.mli  range.ml  range.mli  server.ml  server.mli  uri.ml
cn-lsp/server/src/: Handlers.hs  Log.hs  Monad.hs  Server.hs
cn-lsp/server/src/Handlers/: Initialized.hs
cn-lsp/server/src/Handlers/Custom/: RunCN.hs
cn-lsp/server/src/Handlers/TextDocument/: DidClose.hs  DidSave.hs
cn-lsp/server/src/Handlers/Workspace/: DidChangeConfiguration.hs
cn-lsp/server/test/: dune
coq-synthesis-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  TODO.md  package-lock.json  package.json
coq-synthesis-vscode/scripts/: wait_on_error.sh
coq-synthesis-vscode/src/: extension.ts  types.ts
coq-synthesis-vscode/tests/: app_nil_r_test.v  every_elem_ge_zero_test.v  list_forall2_app_test.v  max_elem_list_test.v
coq-synthesis-vscode/webview/: tree.css  tree.js
docker/: Dockerfile.deps  Dockerfile.release  Makefile_docker  docker_entry_point.sh
docs/: miked_CN_gripes.md  reading_list.md
scripts/csmith/: README.md  cn-fuzz-test.sh  cn-fuzz.sh  cn-reduce.sh  test-with-cn.sh
