cabal-version: 3.0

author: Sam Cowger
build-type: Simple
category: Language
license: NONE
maintainer: sam@galois.com
name: cn-lsp-server
version: 0.0.1


common basis
    ghc-options:
        -Wall
        -Wextra
        -Wunticked-promoted-constructors

    default-language: GHC2021

    default-extensions:
        BlockArguments
        ExplicitNamespaces
        LambdaCase
        RecordWildCards

    build-depends:
        base >=4.16.0.0 && <15,
        aeson ^>=2.2.1.0,
        co-log-core ^>=0.3.2.1,
        lsp ^>=2.6.0.0,
        lsp-types ^>=2.2.0.0,
        mtl ^>=2.3.1,
        process ^>=1.6.17.0,
        text ^>=2.0.2,
        unliftio-core ^>=0.2.1.0,
        vector ^>=0.13.1.0,

library
    import: basis

    hs-source-dirs: src

    exposed-modules:
        CN
        Handlers
        Handlers.Initialized
        Handlers.TextDocument.DidChange
        Handlers.TextDocument.DidClose
        Handlers.TextDocument.DidOpen
        Handlers.TextDocument.DidSave
        Handlers.Workspace.DidChangeConfiguration
        Log
        Monad
        Server
        Util


executable cn-lsp-server
    import: basis

    hs-source-dirs: app
    main-is: Main.hs

    build-depends:
        cn-lsp-server,


test-suite cn-lsp-server-test
    import: basis

    hs-source-dirs: test
    main-is: Main.hs
    type: exitcode-stdio-1.0

    build-depends:
        cn-lsp-server,
