(lang dune 3.12)

(name cnlsp)

(generate_opam_files true)

(authors "Sam Cowger")

(maintainers "Sam Cowger")

(package
 (name cnlsp)
 (synopsis "CN Language Server")
 (description
  "A language server protocol implementation for the CN language")
 (depends
  dune
  (ocaml
   (and
    (>= 5.0.0)
    (< 6.0.0)))
  ;;
  cerberus-lib
  cn
  (jsonrpc
   (and
    (>= 1.17.0)
    (< 2.0.0)))
  (linol
   (and
    (>= 0.6)
    (< 1.0)))
  (linol-lwt
   (and
    (>= 0.6)
    (< 1.0)))
  (logs
   (and
    (>= 0.7.0)
    (< 1.0.0)))
  (lsp
   (and
    (>= 1.17.0)
    (< 2.0.0)))))
